samples/_failures_safe/1761373225_6418af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8e69ac9.c: In function ‘main’:
./samples/SAFE/__tmp_d8e69ac9.c:146:9: error: expected expression at end of input
  146 |         int parsed = sscanf(line, "%31s %15s %255[^\n]", timestamp,
      |         ^~~
./samples/SAFE/__tmp_d8e69ac9.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d8e69ac9.c:146:9: error: expected declaration or statement at end of input
